SDSS-1411: fixing icon alignement and cleanup

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_main_site_subtheme/src/scss/components/masthead/_wrapper.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_main_site_subtheme/src/scss/components/masthead/_wrapper.scss
@@ -21,10 +21,11 @@
       width: 100vw;
       margin-left: calc(50% - 50vw);
       margin-right: calc(50% - 50vw);
+      max-width: 600px;
 
       @include grid-media('md') {
         width: 100%;
-        max-width: 100%;
+        max-width: 600px;
         margin-left: auto;
         margin-right: auto;
       }
