--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_main_site_subtheme/src/scss/components/multi-menu/_main-navigation.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_main_site_subtheme/src/scss/components/multi-menu/_main-navigation.scss
@@ -1,24 +1,5 @@
 @charset "UTF-8";
 
-// Search icon.
-.su-site-search__submit {
-  padding: 0;
-  margin-top: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-  background: url("../../assets/svg/magnifying-glass-24px-black.svg") no-repeat 0 0;
-  opacity: .6;
-  position: absolute;
-  right: 1.2rem;
-  top: .2rem;
-  height: 44px;
-  width: 44px;
-
-  &:hover {
-    background: $sdss-color-white url("../../assets/svg/magnifying-glass-24px-black.svg") no-repeat 0 0;
-  }
-}
-
 // Makes the menu 'sticky' for LG sreens and up
 @include grid-media-min('xs') {
   // Add a scroll offset equivalent to the sticky header to account for any
@@ -59,7 +40,6 @@
 }
 
 .su-multi-menu {
-
   .su-multi-menu__menu-lv1 {
     >li {
       &:last-child {
@@ -168,9 +148,8 @@
         }
       }
 
-
       >.su-multi-menu__item--parent {
-        margin: 0 40px 0 0;
+        margin: 0 0 0 0;
         display: block;
 
         >.su-multi-menu__item--parent:last-of-type {
@@ -178,7 +157,6 @@
         }
 
         >.su-multi-menu__link {
-
           // Remove the pipe, "|", on the dropdrop down menus.
           &::after {
             border-right: none;
@@ -210,13 +188,11 @@
               }
             }
           }
-
         }
       }
     }
   }
 }
-
 
 // Mobile Style.
 .su-multi-menu {
@@ -266,28 +242,9 @@
   }
 }
 
-// On desktop breakpoints hide menu links past the first level of menu depth.
-@include grid-media-min('lg') {
-  .su-multi-menu.su-multi-menu--dropdowns {
-    .su-multi-menu__menu.su-multi-menu__menu-lv2 {
-
-      ul.su-multi-menu__menu,
-      button.su-nav-toggle {
-        // display: unset; testing
-      }
-
-      .su-multi-menu__link {
-        .su-multi-menu__link-text-wrapper {
-          max-width: initial;
-        }
-      }
-
-    }
-  }
-}
-
 // Changing the toggle in menus below the -lv1.
 @include grid-media-min('xs') {
+
   .su-multi-menu__menu-lv1 {
     .su-multi-menu__menu {
       .su-nav-toggle {
@@ -303,12 +260,11 @@
 
         &[aria-expanded=true] {
           top: 15px;
-          right: 17px;
+          right: 10px;
         }
       }
     }
   }
-
 
   .su-multi-menu.su-multi-menu--dropdowns {
     .su-multi-menu__menu {
@@ -316,25 +272,25 @@
       .su-multi-menu__menu-lv2 {
         > .su-multi-menu__item {
           > a.su-multi-menu__link {
-            padding-right: 1rem;
+            // padding-right: 1rem;
           }
         }
 
         > .su-multi-menu__item--parent {
 
           .su-nav-toggle::before {
-            right: 15px;
+            right: 0;
             top: 5px;
           }
 
-          .su-nav-toggle[aria-expanded=true] {
-            top: 10px;
-            right: 10px;
+          button.su-nav-toggle[aria-expanded=true] {
+            top: -2px;
+            // right: 10px;
           }
 
-          .su-nav-toggle:focus[aria-expanded=true]::before {
+          button.su-nav-toggle:focus[aria-expanded=true]::before {
             top: -2px;
-            right: 10px;
+            right: 0;
           }
 
         }
@@ -343,12 +299,11 @@
   }
 
   .su-multi-menu__menu-lv2 .su-multi-menu__item  {
-
     .su-nav-toggle {
 
       &[aria-expanded=true] {
         top: 15px;
-        right: 17px;
+        // right: 0;
       }
 
       &::before {
@@ -358,86 +313,89 @@
         background-size: 15px;
         border-radius: 19px;
         top: 5px;
-        right: 10px;
+        // right: 10px;
       }
 
       &[aria-expanded=true] {
         top: 15px;
-        right: 17px;
+        // right: 17px;
       }
     }
   }
 }
 
-.su-multi-menu.su-multi-menu--dropdowns {
-  .su-multi-menu__menu-lv2 button {
-    right: -16px;
-  }
 
-  .su-multi-menu__menu {
-    >.su-multi-menu__item--parent {
-      .su-nav-toggle {
-        overflow: visible;
-        width: 32px;
-        height: 32px;
-        top: 10px;
-        position: absolute;
-        left: 95%;
+@include grid-media-min('lg') {
+  .su-multi-menu.su-multi-menu--dropdowns {
+    .su-multi-menu__menu-lv2 button {
+      right: -16px;
+    }
 
-        &:active,
-        &:focus,
-        &:hover,
-        &:hover[aria-expanded=false],
-        &[aria-expanded=true]:active,
-        &[aria-expanded=true]:focus {
-          border-bottom: 0;
-          border-top: 0;
-        }
+    .su-multi-menu__menu {
+      >.su-multi-menu__item--parent {
+        .su-nav-toggle {
+          overflow: visible;
+          width: 32px;
+          height: 32px;
+          top: 10px;
+          position: absolute;
+          left: 95%;
 
-        // changing animation from toggle
-        &[aria-expanded=true] {
-          top: 15px;
-          right: 2px;
-          padding-right: 0;
-        }
+          &:active,
+          &:focus,
+          &:hover,
+          &:hover[aria-expanded=false],
+          &[aria-expanded=true]:active,
+          &[aria-expanded=true]:focus {
+            border-bottom: 0;
+            border-top: 0;
+          }
 
-        &:hover {
+          // changing animation from toggle
+          &[aria-expanded=true] {
+            top: 15px;
+            right: 2px;
+            padding-right: 0;
+          }
+
+          &:hover {
+            &::before {
+              background: transparent url("#{$su-image-path}/caret-down-black.svg") no-repeat center / 50%;
+              border-radius: 19px;
+            }
+          }
+
+          &:hover[aria-expanded=false] {
+            &::before {
+              box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.14);
+              border: 1px solid $sdss-color-grey-dark;
+            }
+          }
+
+          &:active {
+            &::before {
+              background: transparent url("#{$su-image-path}/caret-down-black.svg") no-repeat center / 50%;
+              border-radius: 19px;
+            }
+          }
+
+          &:focus {
+            &::before {
+              background: $sdss-color-grey-dark url("#{$su-image-path}/caret-down-white.svg") no-repeat center / 50%;
+              border-radius: 19px;
+            }
+          }
+
           &::before {
             background: transparent url("#{$su-image-path}/caret-down-black.svg") no-repeat center / 50%;
             border-radius: 19px;
+
+            @include grid-media-min('xs') {
+              background: $sdss-color-green-link url("#{$su-image-path}/caret-down-white.svg") no-repeat center / 50%;
+            }
           }
+
         }
-
-        &:hover[aria-expanded=false] {
-          &::before {
-            box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.14);
-            border: 1px solid $sdss-color-grey-dark;
-          }
-        }
-
-        &:active {
-          &::before {
-            background: transparent url("#{$su-image-path}/caret-down-black.svg") no-repeat center / 50%;
-            border-radius: 19px;
-          }
-        }
-
-        &:focus {
-          &::before {
-            background: $sdss-color-grey-dark url("#{$su-image-path}/caret-down-white.svg") no-repeat center / 50%;
-            border-radius: 19px;
-          }
-        }
-
-        &::before {
-          background: transparent url("#{$su-image-path}/caret-down-black.svg") no-repeat center / 50%;
-          border-radius: 19px;
-
-          @include grid-media-min('xs') {
-            background: $sdss-color-green-link url("#{$su-image-path}/caret-down-white.svg") no-repeat center / 50%;
-          }
-        }
-
       }
     }
   }
